Make presentation doc friendler, update slides with links

--- a/present.html
+++ b/present.html
@@ -1,6 +1,1 @@
-<img src="plot.png">
-<script>
-  var p = false;
-  const f = () => { window.location.reload(); }
-  setInterval(f, 500.0);
-</script>
+<img src="plot.png" onclick="window.location.reload();">
